--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,10 +1,13 @@
 body {
     font-family: "Nanum Gothic", sans-serif;
-    background-color: #f8f9fa;
+    background-color: #ffffff;
   }
   
   .card {
     cursor: pointer;
+    border: none;
+    box-shadow: none;
+    margin-bottom: 5px;
     
   }
   
